--- a/ProjetWebPID2425/build.gradle
+++ b/ProjetWebPID2425/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.4.0'
-	id 'io.spring.dependency-management' version '1.1.6'
+	id 'org.springframework.boot' version '3.4.+'
+	id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'org.isfce.pid'
@@ -52,6 +52,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
 	testImplementation 'org.springframework.security:spring-security-test'
 	
+}
+//Depuis SpringSecurity 6.1, il faut activer ce paramètre à la compilation
+//pour que les expressions avec des paramètres comme "#name" obtiennent une valeur
+// par exemple dans #PreAuthorize(expression...)
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs.add("-parameters")
 }
 
 tasks.named('test') {
