--- a/ProjetWebPID2425/src/main/resources/application.yml
+++ b/ProjetWebPID2425/src/main/resources/application.yml
@@ -42,7 +42,8 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri:  http://localhost:8080/realms/CAFET
+          issuer-uri:  http://localhost:8084/realms/CAFET
           jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
+          public-key-location: classpath:certificats/keycloak-public-cert.pem
 
 
