--- a/ProjetWebPID2425/build.gradle
+++ b/ProjetWebPID2425/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.mockito:mockito-core:5.14.+' // pour les mocks
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	//WebJar
 	implementation 'org.webjars:bootstrap:5.3.+'
