--- a/ProjetWebPID2425/src/main/resources/application.yml
+++ b/ProjetWebPID2425/src/main/resources/application.yml
@@ -56,3 +56,33 @@ cafet:
       stop-time: "0 30 14 * * 1-5"
     soir:
       stop-time: "0 30 19 * * 1-5"
+---
+spring:
+  config:
+   activate:
+    on-profile:
+      - testU
+  jpa:
+     hibernate:
+       ddl-auto: create-drop
+  sql:
+     init:
+       mode: never   
+       encoding: UTF-8
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri:  http://localhost:8084/realms/CAFET
+          jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
+          public-key-location: classpath:certificats/keycloak-public-cert.pem
+cafet:
+  session:
+    activate:
+      on-time: "0 0 8 * * MON-FRI"
+    matin:
+      stop-time: "0 30 9 * * 1-5"
+    apm:
+      stop-time: "0 30 14 * * 1-5"
+    soir:
+      stop-time: "0 30 19 * * 1-5"
